# THAMES

./: AUTHORS.md  CHANGES.md  CMakeLists.txt  DISCLAIMER.md  Doxyfile.in  INSTALL.md  README.md
sample-input/inputfiles/: hydrated.img  job1-ccr168-chemistry.xml  parameters.xml  phasemod.txt
sample-output/: ccr168_45.img.thames  chemsys.report  file.txt  gem3k-dat.lst  ipmlog.txt  job1-ccr168-chemistry.xml  job1.0.298.img  job1.0.298.ppm  job1.report  parameters.xml  phasemod.txt  readme  solution-dat.lst
src/: thames.cc  thames.h  version.h.in
src/thameslib/: AppliedStrain.cc  AppliedStrain.h  CMakeLists.txt  ChemicalSystem.cc  ChemicalSystem.h  Controller.cc  Controller.h  ElasticModel.cc  ElasticModel.h  Exceptions.h  Interface.cc  Interface.h  Isite.cc  Isite.h  KineticModel.cc  KineticModel.h  Lattice.cc  Lattice.h  RanGen.h  Site.cc  Site.h  Solution.cc  Solution.h  StrainEnergy.h  ThermalStrain.cc  ThermalStrain.h  global.h  myconfig.h  myconfig.h.in  ran2.cc  ran2.h  ran3.cc  ran3.h  utils.h  valid.cc  valid.h
src/thameslib/GEM3K/: CMakeLists.txt  Makefile  Makefile.lib  datach.h  io_arrays.cpp  io_arrays.h  ipm_chemical.cpp  ipm_chemical2.cpp  ipm_main.cpp  ipm_simplex.cpp  ms_multi_format.cpp  ms_multi_new.h  node.cpp  node.h  nodearray.cpp  nodearray.h  s_fgl_new.h  s_kinmet.cpp  s_kinmet.h  s_solmod.cpp  s_solmod.h  s_solmod2.cpp  s_solmod3.cpp  s_solmod4.cpp  s_solmod5.cpp  s_solmod6.cpp  s_sorpmod.cpp  s_sorpmod.h  tnt_array1d.h  win32-run.bat
src/thameslib/xsdfiles/: chemistry.xsd  ion.xsd  mat.xsd  parameters.xsd  reaction.xsd
src/vcctl2thames/: Makefile  vcctl.h  vcctl2thames.c
src/xsdfiles/: chemistry.xsd  cure.xsd
src/xslfiles/: chemistry.xsl
